objects/Support_Access__c.object
<CustomObject>
    <fields>
        <fullName>BOA_Platform__c</fullName>
        <formula>TEXT(Back_Office_Account__r.Platform__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOA Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOA_Service_Type__c</fullName>
        <formula>TEXT(Back_Office_Account__r.Service_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOA Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOA_Support_Package__c</fullName>
        <formula>TEXT(Back_Office_Account__r.Support_Package__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOA Support Package</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_Office_Account__c</fullName>
        <label>Back Office Account</label>
        <referenceTo>Back_Office_Account__c</referenceTo>
        <relationshipName>Support_Access</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName &amp; &apos; &apos; &amp; Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <label>Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Designated Contact (Read-Only)</fullName>
                </value>
                <value>
                    <fullName>Designated Contact (Read-Write)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Support_Group__c</fullName>
        <formula>TEXT(Contact__r.Country__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Support Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Support_Type__c</fullName>
        <formula>TEXT(Contact__r.Assigned_Support_Access_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Support Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>eService_Access</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Contact__r.Country__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_BOA__c</fullName>
        <label>Duplicate BOA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <formula>Contact__r.Employer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>eService_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <formula>End_User_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Support_Group__c</fullName>
        <formula>TEXT(End_User_Account__r.Support_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User Support Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMS_Access__c</fullName>
        <label>LMS Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
                <value>
                    <fullName>Read Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Terminated_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintenance Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge_From__c</fullName>
        <label>Merge_From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Access_Level__c</fullName>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Contract_Status__c</fullName>
        <description>Old value: TEXT( Service_Contract__r.Agreement_Status__c )</description>
        <formula>TEXT(Back_Office_Account__r.Contract_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOA Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Type_Calc__c</fullName>
        <description>old value: TEXT( Service_Contract__r.Service_Contract_Type__c )</description>
        <formula>TEXT(Back_Office_Account__r.Service_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Contract Type Calc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Type__c</fullName>
        <description>This field is populated by After trigger on Service Contract</description>
        <label>Service Contract Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipName>Support_Access</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>eService_Access1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Name__c</fullName>
        <formula>Sold_To_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Comment__c</fullName>
        <label>Status Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Access Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Owner_Formula__c</fullName>
        <formula>Service_Contract__r.Support_Owner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>eService_Access2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Integrator_Formula__c</fullName>
        <formula>Service_Contract__r.System_Integrator__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Integrator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Integrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Integrator</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>eService_Access3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Boa_Contact_Combination__c</fullName>
        <description>To enforce unique BOA/Contact combination. Format: BOA Id + &quot;_&quot; + Contact Id</description>
        <label>Unique Boa Constraint</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_Record_Validation__c</fullName>
        <label>Unique Record Validation</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_Support_Access__c</fullName>
        <label>Unique Support Access</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Support Access Premise</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Back_Office_Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>SR_Access_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Service_Contract_Status__c</columns>
        <columns>BOA_Service_Type__c</columns>
        <columns>Case_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
            <value>Justin Geddis</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>SR_Access_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Status_Comment__c</columns>
        <columns>Case_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Man</fullName>
        <columns>NAME</columns>
        <columns>SR_Access_Level__c</columns>
        <columns>Status__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>Service_Contract__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>Support_Blocked__c</columns>
        <columns>Contact__c</columns>
        <columns>Maintenance_Terminated_Flag__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>contains</operation>
            <value>Manish Pathania</value>
        </filters>
        <label>Man</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Mariya_Search</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Service_Contract_Status__c</columns>
        <columns>SR_Access_Level__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Service_Contract_Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Service_Contract_Status__c</field>
            <operation>notEqual</operation>
            <value>Terminated</value>
        </filters>
        <label>Blank Status</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SA_Premise_PureConnect</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>Back_Office_Account__c</columns>
        <columns>BOA_Platform__c</columns>
        <columns>Service_Contract_Status__c</columns>
        <columns>BOA_Service_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>SR_Access_Level__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BOA_Platform__c</field>
            <operation>contains</operation>
            <value>Connect</value>
        </filters>
        <label>PureConnect SA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Terminated_03_07</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>SR_Access_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Status_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_Comment__c</field>
            <operation>equals</operation>
            <value>Terminated 03/07</value>
        </filters>
        <label>Terminated 03/07</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sa_delta</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>SR_Access_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Contact_Support_Type__c</columns>
        <columns>Back_Office_Account__c</columns>
        <columns>Service_Contract_Status__c</columns>
        <columns>BOA_Service_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Support_Type__c</field>
            <operation>equals</operation>
            <value>Cloud</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>BOA_Service_Type__c</field>
            <operation>equals</operation>
            <value>Cloud</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>4/4/2016 12:00 AM</value>
        </filters>
        <label>SA Delta</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>sa_premise_customer</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>End_User_Account__c</columns>
        <columns>Sold_To_Account__c</columns>
        <columns>SR_Access_Level__c</columns>
        <columns>Status__c</columns>
        <columns>Contact_Support_Type__c</columns>
        <columns>Back_Office_Account__c</columns>
        <columns>Service_Contract_Status__c</columns>
        <columns>BOA_Service_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Support_Type__c</field>
            <operation>equals</operation>
            <value>Premise</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>BOA_Service_Type__c</field>
            <operation>equals</operation>
            <value>Cloud</value>
        </filters>
        <label>SA Premise Customer - Cloud BOA</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Support Access ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Access Premise</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EU_STAccess_Level_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
OR( ISBLANK( TEXT(SR_Access_Level__c) ) ,  ISBLANK( End_User_Account__c ) ,  ISBLANK( Sold_To_Account__c )),
$User.BypassValidationRules__c = False
)</errorConditionFormula>
        <errorMessage>Please ensure all Required Fields are filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EU_and_ST_match_with_Service_Contract</fullName>
        <active>false</active>
        <errorConditionFormula>IF(End_User_Account__r.Id  &lt;&gt; Service_Contract__r.End_User_Name__r.Id  || Sold_To_Account__r.Id  &lt;&gt; Service_Contract__r.Sold_To_Name__r.Id, True, False)</errorConditionFormula>
        <errorMessage>Please ensure the End User / Sold To on the Support Access record match the End User / Sold To on the selected Service Contract</errorMessage>
    </validationRules>
</CustomObject>